Source/WebCore/html/HTMLMediaElement.cpp
@@ -4527,8 +4527,8 @@ void HTMLMediaElement::updatePlayState()
 
         if (hasMediaControls())
             mediaControls()->playbackStarted();
-        if (document().page() && document().page()->pageThrottler())
-            m_activityToken = document().page()->pageThrottler()->mediaActivityToken();
+        if (document().page())
+            m_activityToken = document().page()->pageThrottler().mediaActivityToken();
 
         startPlaybackProgressTimer();
         m_playing = true;
